[project]
name = "tavern-ai"
version = "0.1.0"
description = "D&D rules assistant."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "langchain>=1.3.6",
    "langchain-aws>=1.5.1",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.2.4",
    "langfuse>=4.7.1",
    "qdrant-client>=1.18.0",
    "boto3>=1.43.26",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "mypy>=2.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pyright]
typeCheckingMode = "basic"
reportCallIssue = "none"
reportArgumentType = "none"
